# rare_species_detections

./: .dockerignore  .gitignore  CONFIG.yaml  CONFIG_PREDICT.yaml  Dockerfile  ECS-50.py  LICENSE  README.md  compute_metrics.sh  config.yaml  dcase_setup.sh  eval_out.csv  help.txt  plot_2d_features.py  preprocess_data.sh  pyproject.toml  test_model.sh  train_model.sh
.devcontainer/: devcontainer.json
BEATs/: BEATs.py  Tokenizers.py  backbone.py  modules.py  quantizer.py
BEATs_on_ESC50/: Dockerfile  README.md  evaluate.sh  fine_tune.sh  pyproject.toml
BEATs_on_ESC50/BEATs/: BEATs.py  Tokenizers.py  backbone.py  modules.py
BEATs_on_ESC50/evaluation/: plot_2d_features.py
BEATs_on_ESC50/fine_tune/: trainer.py  transferLearning.py
Models/: baseline.py  pann.py
callbacks/: callbacks.py
data_utils/: DCASEfewshot.py  audiolist.py  dataset.py  parse_data_dcase.py
datamodules/: DCASEDataModule.py  ECS50DataModule.py  TestDCASEDataModule.py  evaluateDCASEDataModule.py  miniECS50DataModule.py  miniESC50.py  totalDataModule.py
dcase_fine_tune/: CONFIG.yaml  FTBeats.py  FTDataModule.py  FTevaluate.py  FTevaluate.sh  FTtrain.py  FTtrain.sh  _utils.py
evaluate/: _utils_compute.py  _utils_writing.py  config_evaluation.yaml  evaluateDCASE.py
evaluation_metrics/: evaluation.py  evaluation_confidence_intervals.py  metrics.py
evalutate/: fine_tune_plot_2d_features.py
fine_tune/: ECS50DataModule.py  README.md  _utils.py  callbacks.py  config.yaml  trainer.py  transferLearning.py
notebooks/: Bird_songs.ipynb  ECS-50.ipynb  beats.ipynb  fine_tune_beats.ipynb
(+69 files in other folders)
